--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <li>Rating: R (incl. violence, language, drug and alcohol use, suggestive themes, and nudity) </li>
             <li>Genre: Drama, Thriller, Slasher, Satire, and Dark Comedy film</li>
             <li>Lead Actor: Christian Bale starring as Patrick Bateman</li>
-            <li>Producing Company: Lions Gate Films</li>
+            <li>Production Company: Lions Gate Films</li>
             <li>7.6/10 on <a href="https://www.imdb.com/title/tt0144084/">IMDb</a></li>
             <li>68% on <a href="https://www.rottentomatoes.com/m/american_psycho">Rotten Tomatoes</a></li>
         </ul>
